--- a/package.json
+++ b/package.json
@@ -54,11 +54,13 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.2",
+    "react-modal-image": "^2.4.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
+    "tiny-slider-react": "^0.4.0",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
