--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.2",
     "react-modal-image": "^2.4.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
